# nexus

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Contributing.md  README.md  SECURITY.md  com.charachorder.nexus.desktop  dist.bat  dist.py  dist.sh  main.py  nexus.wxs  pyproject.toml  requirements.txt  run.bat  setup.cfg  test-requirements.txt
.github/workflows/: CI.yml  build-test.yaml  pyinstaller-package.yml  pyinstaller.yml
Freqlog/: Definitions.py  Freqlog.py  __init__.py
Freqlog/backends/: Backend.py  __init__.py
Freqlog/backends/SQLite/: SQLiteBackend.py
nexus/: GUI.py  Version.py  __init__.py  __main__.py  keyboard  mouse  style.py  version.py
nexus-lib/: __init__.py  device.py  errors.py
nexus/Freqlog/: Definitions.py  Freqlog.py  __init__.py
nexus/Freqlog/backends/: Backend.py  __init__.py
nexus/Freqlog/backends/SQLite/: SQLiteBackend.py
src/: darwin.spec  main.py  nexus.spec  requirements.txt  win32.spec  xorg.spec
src/Freqlog/: Definitions.py  Freqlog.py
src/Freqlog/backends/: Backend.py
src/Freqlog/backends/SQLite/: SQLiteBackend.py
src/nexus/: GUI.py  __init__.py  __main__.py  style.py
src/nexus/CCSerial/: CCSerial.py  __init__.py
src/nexus/Freqlog/: Definitions.py  Freqlog.py
src/nexus/Freqlog/backends/: Backend.py
src/nexus/Freqlog/backends/SQLite/: SQLiteBackend.py
src/nexus/locales/: example.pot
src/nexus/locales/ro_RO/LC_MESSAGES/: example.mo  example.pot
src/nexus/translations/: i18n_ro.qm
tests/: conftest.py
tests/Freqlog/backends/SQLite/: test_SQLiteBackend.py
tests/mocks/: kbd.py  mouse.py
translations/: i18n_en.ts  i18n_ro.ts
ui/: BanlistDialog.ui  BanwordDialog.ui  MainWindow.ui  banlist.ui  banword.ui  confirm.ui  main.ui  resources.qrc
