[metadata]
name = nexus
version = attr: nexus.__version__
url = https://charachorder.com/nexus
author = attr: nexus.__author__
project_urls =
    Source = https://github.com/CharaChorder/nexus
    Documentation = https://charachorder.com/nexus
    Buy a CharaChorder = https://www.charachorder.com/collections/store
    Funding = https://charachorder.com/donate
    Say Thanks! = https://saythanks.io/to/CharaChorder
description = attr: nexus.__doc__
long_description = file: README.md
long_description_content_type = text/markdown
license = AGPL-3.0
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Environment :: MacOS X
    Environment :: Win32 (MS Windows)
    Environment :: X11 Applications
    Intended Audience :: End Users/Desktop
    Intended Audience :: Education
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Intended Audience :: System Administrators
    Intended Audience :: Developers
    Intended Audience :: Other Audience
    License :: OSI Approved :: GNU Affero General Public License v3
    Natural Language :: English
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Topic :: Database
    Topic :: Desktop Environment
    Topic :: Education
    Topic :: Education :: Computer Aided Instruction (CAI)
    Topic :: Education :: Testing
    Topic :: Office/Business
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: System :: Logging
    Topic :: Text Processing
    Topic :: Utilities
    Topic :: Other/Nonlisted Topic
    Typing :: Typed
keywords =
    CharaChorder
    Freqlog

[options]
packages = find:
python_requires = >=3.11
install_requires =
    setuptools
    pynput

[options.packages.find]
include =
    nexus
    nexus.*

[options.entry_points]
console_scripts =
    nexus = nexus.__main__:main

[options.package_data]
nexus = py.typed
